--- a/index.html
+++ b/index.html
@@ -818,24 +818,38 @@
           <div class="col-md-6 order-md-last d-flex">
             <!-- Note: this form won't send email by itself on GitHub Pages.
                  You can later hook it to Formspree or a similar service. -->
-            <form action="#" class="bg-light p-4 p-md-5 contact-form">
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Your Name">
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Your Email">
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Subject">
-              </div>
-              <div class="form-group">
-                <textarea cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
-              </div>
-              <div class="form-group">
-                <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
-              </div>
-            </form>
-          </div>
+<form id="contactForm" class="contact-form">
+
+  <div class="form-group">
+    <input type="text" name="name" class="form-control" placeholder="Your Name" required>
+  </div>
+
+  <div class="form-group">
+    <input type="email" name="email" class="form-control" placeholder="Your Email" required>
+  </div>
+
+  <div class="form-group">
+    <input type="text" name="subject" class="form-control" placeholder="Subject">
+  </div>
+
+  <div class="form-group">
+    <textarea name="message" cols="30" rows="7" class="form-control" placeholder="Message" required></textarea>
+  </div>
+
+  <!-- Honeypot spam protection -->
+  <input type="text" name="_gotcha" style="display:none">
+
+  <div class="form-group">
+    <button type="submit" class="btn btn-primary py-3 px-5">Send Message</button>
+  </div>
+
+  <!-- Success / error message -->
+  <p id="formStatus" style="display:none; margin-top:15px;"></p>
+
+</form>
+
+
+                </div>
 
           <div class="col-md-6 d-flex">
             <div class="img" style="background-image: url(images/about.jpg);"></div>
@@ -939,6 +953,43 @@
     <script src="js/scrollax.min.js"></script>
 
     <script src="js/main.js"></script>
+<script>
+  const form = document.getElementById("contactForm");
+  const status = document.getElementById("formStatus");
+
+  form.addEventListener("submit", async function (e) {
+    e.preventDefault(); // STOP redirect
+
+    const data = new FormData(form);
+
+    try {
+      const response = await fetch("https://formspree.io/f/mqeaaplw", {
+        method: "POST",
+        body: data,
+        headers: {
+          "Accept": "application/json"
+        }
+      });
+
+      if (response.ok) {
+        status.style.display = "block";
+        status.style.color = "#28a745";
+        status.innerText = "✅ Thank you! Your message has been sent.";
+        form.reset();
+      } else {
+        status.style.display = "block";
+        status.style.color = "#dc3545";
+        status.innerText = "❌ Oops! Something went wrong. Please try again.";
+      }
+    } catch (error) {
+      status.style.display = "block";
+      status.style.color = "#dc3545";
+      status.innerText = "❌ Network error. Please try again later.";
+    }
+  });
+</script>
+
+
 
   </body>
 </html>
