--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
              style="background-image: url(images/project-4.jpg);">
           <div class="overlay"></div>
           <div class="text text-center p-4">
-            <h3><a href="projects.html#p-soft-manip">Vision-Driven Soft Manipulation on a Quadruped</a></h3>
+            <h3><a href="projects/soft-manipulation.html">Vision-Driven Soft Manipulation on a Quadruped</a></h3>
             <span>Robotics • RGB-D SLAM • Perception</span>
           </div>
         </div>
@@ -445,7 +445,7 @@
              style="background-image: url(images/project-5.jpg);">
           <div class="overlay"></div>
           <div class="text text-center p-4">
-            <h3><a href="projects.html#p-rgbd-yolo">YOLOv8 RGB-D Object Detection &amp; 3D Localization (RealSense + ROS)</a></h3>
+            <h3><a href="projects/rgbd-yolo.html">YOLOv8 RGB-D Object Detection &amp; 3D Localization (RealSense + ROS)</a></h3>
             <span>Robotics • ROS • RealSense • 3D Localization</span>
           </div>
         </div>
@@ -457,7 +457,7 @@
              style="background-image: url(images/project-1.jpg);">
           <div class="overlay"></div>
           <div class="text text-center p-4">
-            <h3><a href="projects.html#p-nutrispecs">NutriSpecs — Smart Glasses for Food-Intake Detection &amp; HR Monitoring</a></h3>
+            <h3><a href="projects/nutrispecs.html">NutriSpecs — Smart Glasses for Food-Intake Detection &amp; HR Monitoring</a></h3>
             <span>Wearables • Embedded AI • ESP32-S3 • Computer Vision</span>
           </div>
         </div>
