--- a/projects/rgbd-yolo.html
+++ b/projects/rgbd-yolo.html
@@ -197,17 +197,20 @@
   <h3 class="mini-title" data-aos="fade-up">System Architecture</h3>
 
   <h4 class="subhead" data-aos="fade-up">Perception Pipeline</h4>
-  <div class="mono-block" data-aos="fade-up">
-    <pre><code>Camera (RGB / RGB-D)
-        ↓
-YOLOv8 Object Detection
-        ↓
-Depth & Geometry Estimation
-        ↓
-ROS / Python Perception Interface
-        ↓
-Robot Decision & Control Modules</code></pre>
-  </div>
+
+<div class="text-center" data-aos="fade-up">
+  <img
+    src="../images/yolov_images/architecture.png"
+    alt="System architecture / perception pipeline"
+    class="img-fluid rounded shadow"
+    style="max-width: 92%;"
+  >
+  <p class="mt-2" style="font-size:13px; opacity:0.7;">
+    Figure. System architecture and perception pipeline.
+  </p>
+</div>
+
+
 
   <div class="project-divider"></div>
 
